cabal-version:      2.4
name:               packell
version:            0.1.0.0
synopsis:           Daml Finance Package Processor
license:            Apache-2.0
author:             Digital Asset
copyright:          Digital Asset 2022

executable packell
    default-language:   Haskell2010
    hs-source-dirs:     src
    main-is:            Main.hs
    build-depends:      base ==4.14.3.0,
                        directory,
                        -- Glob,
                        filepath,
                        filepattern,
                        optparse-applicative,
                        vector,
                        yaml
    other-modules:      Parameters,
                        Daml.Source,
                        Daml.Yaml,
                        Daml.Package,
                        Package.Yaml
