cabal-version:      2.4
name:               packell
version:            0.1.0.0
synopsis:           Daml Finance Package Processor
license:            Apache-2.0
author:             Digital Asset
copyright:          Digital Asset 2022

executable packell
    default-language:   Haskell2010
    hs-source-dirs:     src
    main-is:            Main.hs
    build-depends:      base ==4.14.3.0,
                        aeson,
                        colourista,
                        directory,
                        filepath,
                        filepattern,
                        optparse-applicative,
                        text,
                        utf8-string,
                        vector,
                        yaml
    other-modules:      Daml.DataDependencies,
                        Daml.Import,
                        Daml.Package,
                        Daml.Source,
                        Daml.Yaml,
                        Options.Arguments,
                        Package.Yaml
