cabal-version:      2.4
name:               packell
version:            0.1.0.0
synopsis:           Daml Finance Package App
license:            Apache-2.0
author:             Digital Asset
copyright:          Digital Asset 2022

executable packell
    default-language:   Haskell2010
    hs-source-dirs:     src/main/haskell
    main-is:            Main.hs
    build-depends:      base ==4.14.3.0,
                        aeson,
                        ansi-terminal,
                        colourista,
                        directory,
                        filepath,
                        filepattern,
                        optparse-applicative,
                        shelly,
                        text,
                        time,
                        utf8-string,
                        vector,
                        yaml
    other-modules:      Daml.DataDependencies,
                        Daml.Import,
                        Daml.Package,
                        Daml.Source,
                        Daml.Version,
                        Daml.Yaml,
                        Git.Commands,
                        Options.Arguments,
                        Package.Yaml,
                        Spin.Functions,
                        Spin.Specs,
                        Spin.Types
